--- a/app/src/main/res/layout/cortume_layout_list.xml
+++ b/app/src/main/res/layout/cortume_layout_list.xml
@@ -14,21 +14,13 @@
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/delete_btn"
+        android:id="@+id/cart_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="5dp"
-        android:text="Delete" />
-
-    <Button
-        android:id="@+id/add_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toLeftOf="@id/delete_btn"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="10dp"
-        android:text="Add" />
+        android:background="@mipmap/ic_launcher_round"
+        android:text="toCart" />
 
 </RelativeLayout>
