Some more design work on the activities

--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -5,127 +5,123 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AdminActivity"
+    tools:ignore="ContentDescription"
     tools:layout_editor_absoluteY="25dp">
 
     <TextView
         android:id="@+id/AddHeader"
-        android:layout_width="167dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginBottom="198dp"
+        android:layout_marginEnd="121dp"
+        android:layout_marginRight="121dp"
+        android:layout_marginBottom="3dp"
         android:text="Add"
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textColor="@color/design_default_color_primary"
         android:textSize="30sp"
         android:textStyle="bold"
         app:fontFamily="casual"
-        app:layout_constraintBottom_toTopOf="@+id/AddButton"
+        app:layout_constraintBottom_toTopOf="@+id/ProductNameTextBox"
+        app:layout_constraintEnd_toStartOf="@+id/logOutButt"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
     <TextView
         android:id="@+id/DeleteHeader"
-        android:layout_width="159dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginBottom="25dp"
-        android:lineSpacingExtra="18sp"
+        android:layout_width="96dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="112dp"
+        android:layout_marginBottom="8dp"
         android:text="Delete"
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textColor="@color/design_default_color_primary"
         android:textSize="30sp"
         android:textStyle="bold"
         app:fontFamily="casual"
-        app:layout_constraintBottom_toTopOf="@+id/productIdText"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ProductQuatityText" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ProductQuatityText"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="0dp" />
 
     <TextView
         android:id="@+id/ProductNameText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:layout_marginRight="24dp"
-        android:layout_marginBottom="34dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginRight="28dp"
         android:text="@string/product_name"
         android:textColor="@color/common_google_signin_btn_text_dark_focused"
         android:textSize="18sp"
         app:fontFamily="casual"
-        app:layout_constraintBottom_toTopOf="@+id/ProductPriceText"
         app:layout_constraintEnd_toEndOf="@+id/AddHeader"
         app:layout_constraintTop_toBottomOf="@+id/AddHeader" />
 
     <TextView
         android:id="@+id/ProductPriceText"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
-        android:layout_marginBottom="30dp"
+        android:layout_width="119dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="52dp"
+        android:layout_marginRight="52dp"
+        android:layout_marginBottom="8dp"
         android:text="Product Price:"
         android:textColor="@color/common_google_signin_btn_text_dark_focused"
         android:textSize="18sp"
         app:fontFamily="casual"
         app:layout_constraintBottom_toTopOf="@+id/ProductQuatityText"
-        app:layout_constraintEnd_toEndOf="@+id/ProductNameText"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/ProductQuatityText"
-        app:layout_constraintTop_toBottomOf="@+id/ProductNameText" />
+        app:layout_constraintEnd_toStartOf="@+id/productPriceTextBox"
+        app:layout_constraintTop_toBottomOf="@+id/ProductNameText"
+        app:layout_constraintVertical_bias="0.285" />
 
     <TextView
         android:id="@+id/ProductQuatityText"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="69dp"
+        android:layout_width="133dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="3dp"
         android:text="Product Quatity:"
         android:textColor="@color/common_google_signin_btn_text_dark_focused"
         android:textSize="18sp"
         app:fontFamily="casual"
-        app:layout_constraintBottom_toTopOf="@+id/DeleteHeader"
-        app:layout_constraintEnd_toEndOf="@+id/productIdText"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintBottom_toBottomOf="@+id/productQuantityTextBox"
+        app:layout_constraintEnd_toEndOf="@+id/DeleteHeader"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/ProductNameText"
-        app:layout_constraintTop_toBottomOf="@+id/ProductPriceText" />
+        app:layout_constraintTop_toTopOf="@+id/productQuantityTextBox"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/productIdText"
         android:layout_width="153dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginBottom="172dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginLeft="52dp"
+        android:layout_marginTop="20dp"
         android:text="Product Id:"
         android:textColor="@color/common_google_signin_btn_text_dark_focused"
         android:textSize="18sp"
         app:fontFamily="casual"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/DeleteHeader"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/DeleteHeader" />
 
     <EditText
         android:id="@+id/ProductNameTextBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="11dp"
         android:ems="10"
         android:hint="name"
         android:inputType="textPersonName"
-        app:layout_constraintStart_toEndOf="@+id/ProductNameText"
-        app:layout_constraintTop_toTopOf="@+id/ProductNameText" />
+        app:layout_constraintStart_toEndOf="@+id/AddHeader"
+        app:layout_constraintTop_toBottomOf="@+id/logOutButt" />
 
     <EditText
         android:id="@+id/productPriceTextBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="12dp"
         android:ems="10"
         android:hint="price"
         android:inputType="textPersonName"
@@ -136,50 +132,75 @@
         android:id="@+id/productQuantityTextBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginTop="44dp"
         android:ems="10"
         android:hint="quantity"
         android:inputType="textPersonName"
-        app:layout_constraintBaseline_toBaselineOf="@+id/ProductQuatityText"
-        app:layout_constraintStart_toStartOf="@+id/productPriceTextBox" />
+        app:layout_constraintStart_toStartOf="@+id/productPriceTextBox"
+        app:layout_constraintTop_toTopOf="@+id/productPriceTextBox" />
 
     <EditText
         android:id="@+id/productIdTextBox2"
-        android:layout_width="wrap_content"
+        android:layout_width="215dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:hint="id"
         android:inputType="textPersonName"
-        app:layout_constraintBaseline_toBaselineOf="@+id/productIdText"
-        app:layout_constraintStart_toEndOf="@+id/DeleteHeader" />
+        app:layout_constraintStart_toEndOf="@+id/productIdText"
+        app:layout_constraintTop_toBottomOf="@+id/DeleteHeader" />
 
     <Button
         android:id="@+id/AddButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="108dp"
-        android:layout_marginLeft="108dp"
-        android:layout_marginBottom="124dp"
+        android:layout_marginTop="40dp"
         android:background="@color/design_default_color_primary"
         android:text="Add"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/DeleteButton"
-        app:layout_constraintStart_toStartOf="@+id/ProductQuatityText"
-        app:layout_constraintTop_toBottomOf="@+id/AddHeader" />
+        app:layout_constraintEnd_toStartOf="@+id/productQuantityTextBox"
+        app:layout_constraintHorizontal_bias="0.579"
+        app:layout_constraintStart_toStartOf="@+id/productQuantityTextBox"
+        app:layout_constraintTop_toBottomOf="@+id/productQuantityTextBox" />
 
     <Button
         android:id="@+id/DeleteButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="98dp"
+        android:layout_marginStart="136dp"
+        android:layout_marginLeft="136dp"
+        android:layout_marginTop="32dp"
         android:background="@color/design_default_color_primary"
         android:text="Delete"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/AddButton"
-        app:layout_constraintStart_toStartOf="@+id/AddButton"
-        app:layout_constraintTop_toBottomOf="@+id/AddButton" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/productIdTextBox2" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="277dp"
+        android:layout_height="69dp"
+        android:layout_marginTop="1dp"
+        app:layout_constraintEnd_toStartOf="@+id/ProductNameTextBox"
+        app:layout_constraintStart_toStartOf="@+id/ProductNameTextBox"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/smallogo" />
+
+    <Button
+        android:id="@+id/logOutButt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="51dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:background="@color/design_default_color_primary"
+        android:text="log out"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/AddHeader"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
