--- a/app/src/main/res/layout/cortume_layout_cart_list.xml
+++ b/app/src/main/res/layout/cortume_layout_cart_list.xml
@@ -25,7 +25,7 @@
 
     <EditText
         android:id="@+id/emountEditText"
-        android:layout_width="44dp"
+        android:layout_width="92dp"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/cart_btn"
         android:layout_marginEnd="9dp"
@@ -34,7 +34,7 @@
         android:layout_toStartOf="@+id/cart_btn"
         android:layout_toLeftOf="@+id/cart_btn"
         android:ems="10"
-        android:inputType="number"
-        android:text="1" />
+        android:hint="enter amount"
+        android:inputType="number" />
 
 </RelativeLayout>
