--- a/app/src/main/res/layout/activity_registered_main.xml
+++ b/app/src/main/res/layout/activity_registered_main.xml
@@ -20,8 +20,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="171dp"
-        android:layout_height="123dp"
+        android:layout_width="257dp"
+        android:layout_height="72dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -46,7 +46,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="11dp"
         android:background="@color/design_default_color_primary"
-        android:text="toCart"
+        android:text="go to Cart"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
         app:layout_constraintBottom_toTopOf="@+id/listView"
         app:layout_constraintEnd_toEndOf="parent"
