--- a/app/src/main/res/layout/activity_registered_main.xml
+++ b/app/src/main/res/layout/activity_registered_main.xml
@@ -55,5 +55,17 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintVertical_bias="1.0" />
 
+    <Button
+        android:id="@+id/logOutbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:background="@color/design_default_color_primary"
+        android:text="log out"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
     app:layout_constraintTop_toBottomOf="@+id/text"
 </android.support.constraint.ConstraintLayout>
